--- a/WorkShop/Clone_NetFlix/public/css/style.css
+++ b/WorkShop/Clone_NetFlix/public/css/style.css
@@ -46,3 +46,8 @@ Body{
     text-transform: uppercase;
     cursor: pointer;
 }
+
+.join-btn{
+    background: #dd0e15;
+    border-color: #dd0e15;
+}
