--- a/WorkShop/Clone_NetFlix/public/css/style.css
+++ b/WorkShop/Clone_NetFlix/public/css/style.css
@@ -82,7 +82,7 @@ Body{
 .movie-category{
     font-size: 20px;
     font-weight: 500;
-    margin-top: 20px;
+    margin-bottom: 20px;
     text-transform: capitalize;
 }
 
@@ -90,14 +90,15 @@ Body{
     width: 100%;
     height: 200px;
     align-items: center;
-    /* overflow-x: auto;
-    overflow-y: hidden; */
+    overflow-x: hidden;
+    overflow-y: hidden; 
     scroll-behavior: smooth;
+    display: flex;
 }
 
-.movie-category::-webkit-scrollbar{
+/* .movie-category::-webkit-scrollbar{
     display: none;
-}
+} */
 
 .movie{
     flex: 0 0 auto;
@@ -107,4 +108,47 @@ Body{
     margin-right: 10px;
     cursor: pointer;
     position: relative;
+}
+
+.movie img{
+    width: 100%;
+    height: 170px;
+    object-fit: cover;
+}
+
+.movie p{
+    text-transform: capitalize;
+    height: 20px;
+    overflow: hidden;
+}
+
+.prev-btn, .next-btn{
+    position: absolute;
+    height: 200px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 2.5vw;
+    background: #181818;
+    border: none;
+    outline: none;
+}
+
+.prev-btn{
+    left: -2.5vw;
+}
+
+.next-btn{
+    right: -2.5vw;
+}
+
+.prev-btn img, .next-btn img{
+    width: 20px;
+    height: 20px;
+    object-fit: contain;
+    opacity: 0.2;
+}
+
+.prev-btn img:hover, .next-btn img:hover{
+    opacity: 1;
+    cursor: pointer;
 }
